Fixes #17: Implemented autocomplete for tags

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "bower-asset/codemirror-buttons": "~1.0.4",
         "creocoder/yii2-taggable": "~2.0.0",
         "codemix/yii2-localeurls": "^1.2",
-        "bower-asset/magnific-popup": "~1.1"
+        "bower-asset/magnific-popup": "~1.1",
+        "yiisoft/yii2-jui": "~2.0.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
