--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "bower-asset/codemirror": "~5.9.0",
         "bower-asset/codemirror-buttons": "~1.0.4",
         "creocoder/yii2-taggable": "~2.0.0",
-        "codemix/yii2-localeurls": "^1.2",
+        "codemix/yii2-localeurls": "~1.4.10",
         "bower-asset/magnific-popup": "~1.1",
         "yiisoft/yii2-jui": "~2.0.0",
         "bower-asset/cropper": "@dev"
