--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "bower-asset/magnific-popup": "~1.1",
         "yiisoft/yii2-jui": "~2.0.0",
         "bower-asset/cropper": "@dev",
-        "bower-asset/font-awesome": "*"
+        "bower-asset/font-awesome": "*",
+        "claviska/simpleimage": "^3.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
