--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "codemix/yii2-localeurls": "~1.4.10",
         "bower-asset/magnific-popup": "~1.1",
         "yiisoft/yii2-jui": "~2.0.0",
-        "bower-asset/cropper": "@dev"
+        "bower-asset/cropper": "@dev",
+        "bower-asset/font-awesome": "*",
+        "claviska/simpleimage": "^3.3"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
@@ -47,10 +49,12 @@
             "generateCookieValidationKey": [
                 "config/web.php"
             ]
-        },
-        "asset-installer-paths": {
-            "npm-asset-library": "vendor/npm",
-            "bower-asset-library": "vendor/bower"
         }
+    },
+    "repositories": [
+    {
+        "type": "composer",
+        "url": "https://asset-packagist.org"
     }
+]
 }
