--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
         "yiisoft/yii2-bootstrap": "~2.0.6",
         "yiisoft/yii2-swiftmailer": "~2.0.6",
         "yiisoft/yii2-authclient": "~2.1.1",
-        "yiisoft/yii2-imagine": "~2.1.0",
         "cebe/yii2-gravatar": "~1.1",
         "baibaratsky/yii2-rollbar": "1.2.*",
         "bower-asset/codemirror": "~5.9.0",
@@ -22,7 +21,7 @@
         "bower-asset/magnific-popup": "~1.1",
         "yiisoft/yii2-jui": "~2.0.0",
         "bower-asset/cropper": "@dev",
-        "bower-asset/font-awesome": "*",
+        "bower-asset/font-awesome": "~4.7.0.0",
         "claviska/simpleimage": "^3.3"
     },
     "require-dev": {
