--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "yiisoft/yii2-swiftmailer": "~2.0.6",
         "yiisoft/yii2-authclient": "~2.2.7",
         "cebe/yii2-gravatar": "~1.1",
-        "baibaratsky/yii2-rollbar": "1.2.*",
+        "baibaratsky/yii2-rollbar": "~1.8.0",
         "bower-asset/codemirror": "~5.9.0",
         "bower-asset/codemirror-buttons": "~1.0.4",
         "bower-asset/vanilla-lazyload": "~10.6.0",
