--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,10 @@
         "yiisoft/yii2-gii": "~2.2.1"
     },
     "config": {
-        "process-timeout": 1800
+        "process-timeout": 1800,
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true
+        }
     },
     "scripts": {
         "post-create-project-cmd": [
